<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewmodel"
            type="com.example.android.sparkstories.ui.signup.NewScreenNameViewModel" />

        <variable
            name="isLoading"
            type="Boolean" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/new_screen_name_constraint_layout"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@mipmap/table_top_port"
        tools:context=".ui.signup.NewScreenNameFragment">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/Theme.WriteItSayItHearIt.FilterTextInputLayout"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_new_screen_name"
                android:text="@={viewmodel.screenName.text}"
                android:theme="@style/Theme.WriteItSayItHearIt.FilterEditText"
                android:hint="@string/screen_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:addOnTextChangeListener="@{viewmodel.screenNameTextChangeListener()}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_submit_screen_name"
            android:text="@string/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:layout_marginRight="@dimen/margin_large"
            android:layout_marginEnd="@dimen/margin_large"
            app:layout_constraintTop_toBottomOf="@id/text_input_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:onClick="@{() -> viewmodel.onSubmitScreenName()}"
            />
       <androidx.core.widget.ContentLoadingProgressBar
           style="?android:attr/progressBarStyleLarge"
           android:indeterminateTint="@color/secondaryDarkColor"
           android:id="@+id/progress_bar_new_screen_name"
           visibleGone="@{isLoading}"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           app:layout_constraintTop_toTopOf="parent"
           app:layout_constraintBottom_toBottomOf="parent"
           app:layout_constraintRight_toRightOf="parent"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintLeft_toLeftOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
