...
            android:orientation="horizontal"
            android:indeterminate="true"
            android:indeterminateTint="@color/secondaryDarkColor"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            app:layout_constraintTop_toBottomOf="@id/filter_cues_layout"
            app:layout_constraintBottom_toTopOf="@id/cues_list"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>


...
